--- a/app/src/main/res/layout/list_equipamento.xml
+++ b/app/src/main/res/layout/list_equipamento.xml
@@ -15,7 +15,9 @@
         android:layout_height="wrap_content" />
 
     <View
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_height="0.3dp"
         android:layout_gravity="center"
         android:background="@color/textColorDark"/>
