Single real-time chart enabled

--- a/app/src/main/res/layout/fragment_graficos.xml
+++ b/app/src/main/res/layout/fragment_graficos.xml
@@ -3,19 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.GraficosFragment">
+    tools:context=".Fragment.UnicoGraficoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <!--<ListView-->
-        <!--android:id="@+id/listaGraficos"-->
+    <!--<com.github.mikephil.charting.charts.LineChart-->
+        <!--android:id="@+id/grafico"-->
         <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"/>-->
+        <!--android:layout_height="300dp"/>-->
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/grafico"
+    <ListView
+        android:id="@+id/listaGraficos"
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
