--- a/app/src/main/res/layout/fragment_ponto.xml
+++ b/app/src/main/res/layout/fragment_ponto.xml
@@ -56,5 +56,13 @@
         android:clickable="true"
         android:src="@drawable/ic_show_chart_white_24dp" />
 
+    <!--<com.example.finalsimme.MovableFloatingActionButton-->
+        <!--android:id="@+id/floatingActionButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:src="@drawable/ic_show_chart_white_24dp"-->
+        <!--android:layout_margin="@dimen/fab_margin"/>-->
+
 
 </FrameLayout>
